Added swagger-ui and custimized to fit theme.
